kubernetes/longhorn/addl/ingress.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: longhorn-dashboard
  namespace: my-longhorn
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: selfsigned
spec:
  rules:
  - host: l.local.127.0.0.1.sslip.io
    http:
      paths:
      - backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - l.local.127.0.0.1.sslip.io
    secretName: longhorn-dashboard-cert
